--- a/IPYNBs/Saudi Healthcare Problem Generation - Sample Data.ipynb
+++ b/IPYNBs/Saudi Healthcare Problem Generation - Sample Data.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "#Path to Trane for imports\n",
     "sys.path.append('/Users/Alexander/Documents/Trane/Trane__HDI_REPO')\n",
-    "path_to_datasets = '../Trane__Local_Misc/Formatted Datasets/Saudi ER/'\n",
+    "path_to_datasets = '../../Trane__Local_Misc/Formatted Datasets/Saudi ER Sample Data/'\n",
     "import pandas as pd\n",
     "import trane\n",
     "import json\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
